--- a/styles/globals.css
+++ b/styles/globals.css
@@ -249,7 +249,7 @@ font-family: 'Futura PT Book', cursive;
 
   background-image: url('/navbar.png')*/
   background-color: #fefefe;
-    color:#0d0e0d;
+    color:#0d0e0e;
   font-family: 'FuturaCyrillicDemi', monospace;
   text-transform: uppercase;
 
