--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,8 +29,8 @@
 
 body {
   background-color: #fefeff;
-  /* background-image: url('/images/bg.png'); 
-  color: yellow; */
+  background-image: url('/images/bg.jpg');
+  /* color: yellow; */
   padding: 0;
   margin: 0;
   font-family: "Courier New", monospace;
